P4ADEV-4675-change-segregation-code-handler